--- a/index.html
+++ b/index.html
@@ -519,15 +519,15 @@
 			}
 			
 			const gameDetails = {
-				nation1: "Sri Lanka",
-				nation2: "Zimbabwe",
-				date: "Jan 4-7, 2002",
-				venue: "Kandy",
-				score: "Zimbabwe 236 & 175, Sri Lanka 505; Sri Lanka won by an innings and 94 runs",
-				crickdlequestion: "Sri Lanka player took 9/51 & 4/64 in this match?"
+				nation1: "England",
+				nation2: "Pakistan",
+				date: "Nov 1-5, 2015",
+				venue: "Sharjah",
+				score: "Pakistan 234 & 355, England (T: 284) 306 & 156; Pakistan won by 127 runs",
+				crickdlequestion: "Pakistan player scored 27 & 151 in this match?"
 			};
 
-			const correctPlayer = ["MURALIDARAN", "MURALI"];
+			const correctPlayer = ["HAFEEZ"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
