--- a/result.html
+++ b/result.html
@@ -361,7 +361,7 @@ const lastTimestamp = localStorage.getItem("lastTimestamp");
   }
 } else {
   result1MessageElement.textContent = "Out for a duck!";
-  result2MessageElement.textContent = "You didn't get today's Crickdle. The correct answer is MURALIDARAN.";
+  result2MessageElement.textContent = "You didn't get today's Crickdle. The correct answer is HAFEEZ.";
   streak = 0;
   localStorage.setItem("streak", streak.toString());
 }
