--- a/result.html
+++ b/result.html
@@ -235,6 +235,12 @@
 			width: 20px;
 			height: 20px;
 		}
+		
+		img {
+			margin-bottom: 1rem;
+			margin-top: 1rem;
+			width: 10rem;
+		}
 						
 		.game-container {
 			margin: auto;
