--- a/result.html
+++ b/result.html
@@ -272,7 +272,7 @@
 						<button class="popup-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup-content">
-						<p>Based on their stats in this game, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <span style="font-weight: 500">surname</span> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><span style="font-weight: 500">orange</span></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><span style="font-weight: 500">grey</span></span>.
+						<p>Based on their stats in this game, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <span style="font-weight: 500">surname</span> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><span style="font-weight: 500">orange</span></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><span style="font-weight: 500">grey</span></span>.<br><br>A new Crickdle is released at 9am UK time each day.</p>
 					</div>
 				</div>
 			</div>
@@ -283,7 +283,7 @@
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket. There's a new cricketer to guess every day.<br><br>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+						<p>Crickdle is a love letter to Test cricket.<br><br><b>March 20 2023</b><br><br>No. 30<br><br>Created and edited by Ayush Sanghavi<br><br>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
 					</div>
 					</div>
 			</div>
