--- a/result.html
+++ b/result.html
@@ -283,7 +283,7 @@
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket.<br><br><b>March 20 2023</b><br><br>No. 30<br><br>Created and edited by Ayush Sanghavi<br><br>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+						<p>Crickdle is a love letter to Test cricket.<br><br><b>March 20 2023</b><br>No. 30<br>Created and edited by Ayush Sanghavi<br><br>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
 					</div>
 					</div>
 			</div>
