--- a/index.html
+++ b/index.html
@@ -215,7 +215,14 @@
 				background: none;
 				border: none;
 				cursor: pointer;
-				margin-left: 15px;
+				margin-left: 1rem;
+			}
+			
+				.toolbar-info {
+				background: none;
+				border: none;
+				cursor: pointer;
+				margin-right: 1rem;
 			}
 
 			.popup-background {
@@ -270,13 +277,6 @@
 				font-size: 18px;
 				line-height: 1.5;
 				font-family: InterTight, sans-serif;
-			}
-			
-			.toolbar-info {
-				background: none;
-				border: none;
-				cursor: pointer;
-				margin-right: 15px;
 			}
 
 			.popup2-background {
