--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				padding: 0 16px;
+				padding: 0 1rem;
 				box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
 				margin-bottom: 30px
 			}
