--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				padding-left: 15rem;
-				padding-right: 15rem;
+				padding-left: 1rem;
+				padding-right: 1rem;
+				object-fit: fill;
 				box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
 				margin-bottom: 30px
 			}
