--- a/index.html
+++ b/index.html
@@ -180,10 +180,8 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				padding-left: 3rem;
-				padding-right: 3rem;
-				object-fit: fill;
-				box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+				padding-left: 16px;
+				padding-right: 16px;
 				margin-bottom: 30px
 			}
 			
@@ -217,14 +215,14 @@
 				background: none;
 				border: none;
 				cursor: pointer;
-				margin-left: 3rem;
+				margin-left: 2.5rem;
 			}
 			
 				.toolbar-info {
 				background: none;
 				border: none;
 				cursor: pointer;
-				margin-right: 3rem;
+				margin-right: 2.5rem;
 			}
 
 			.popup-background {
