--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				padding-left: 16px;
-				padding-right: 16px;
+				padding: 0 16px;
 				margin-bottom: 30px
 			}
 			
@@ -215,14 +214,14 @@
 				background: none;
 				border: none;
 				cursor: pointer;
-				margin-left: 2.5rem;
+				margin-left: 2rem;
 			}
 			
 				.toolbar-info {
 				background: none;
 				border: none;
 				cursor: pointer;
-				margin-right: 2.5rem;
+				margin-right: 2rem;
 			}
 
 			.popup-background {
@@ -458,7 +457,7 @@
 						<button class="popup-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup-content">
-						<p>Based on their stats in this game, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <span style="font-weight: 500">surname</span> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><span style="font-weight: 500">orange</span></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><span style="font-weight: 500">grey</span></span>.<br>A new Crickdle is released at 9 a.m. UK time each day.
+						<p>Based on their stats in this game, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <span style="font-weight: 500">surname</span> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><span style="font-weight: 500">orange</span></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><span style="font-weight: 500">grey</span></span>.<br><br>A new Crickdle is released at 9 a.m. UK time each day.
 					</div>
 				</div>
 			</div>
@@ -469,7 +468,7 @@
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket.<br><br><span style="font-weight: 500">March 20 2023</span><br>No. 30<br><br>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+						<p>Crickdle is a love letter to Test cricket.<br><br><span style="font-weight: 500">March 20 2023</span><br>Crickdle no. 30<br><br>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
 					</div>
 				</div>
 			</div>
