--- a/result.html
+++ b/result.html
@@ -60,7 +60,6 @@
 			justify-content: center;
 			align-items: center;
 			padding: 0 16px;
-			box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
 			margin-bottom: 30px
 			}
 
@@ -94,7 +93,14 @@
 				background: none;
 				border: none;
 				cursor: pointer;
-				margin-left: 15px;
+				margin-left: 2rem;
+			}
+		
+			.toolbar-info {
+				background: none;
+				border: none;
+				cursor: pointer;
+				margin-right: 2rem;
 			}
 
 			.popup-background {
@@ -149,13 +155,6 @@
 				font-size: 18px;
 				line-height: 1.5;
 				font-family: InterTight, sans-serif;
-			}
-			
-			.toolbar-info {
-				background: none;
-				border: none;
-				cursor: pointer;
-				margin-right: 15px;
 			}
 
 			.popup2-background {
@@ -283,7 +282,7 @@
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket.<br><br><span style="font-weight: 500">March 20 2023</span><br>No. 30<br><br>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+						<p>Crickdle is a love letter to Test cricket.<br><br><span style="font-weight: 500">March 20 2023</span><br>Crickdle no. 30<br><br>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
 					</div>
 					</div>
 			</div>
