--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
 			.popup-close {
 				background: none;
 				border: none;
-				font-size: 24px;
+				font-size: 30px;
 				cursor: pointer;
-				color: #f03a17;
+				color: #000000;
 				font-family: InterTight, sans-serif;
 			}
 
@@ -319,9 +319,9 @@
 			.popup2-close {
 				background: none;
 				border: none;
-				font-size: 24px;
+				font-size: 30px;
 				cursor: pointer;
-				color: #f03a17;
+				color: #000000;
 				font-family: InterTight, sans-serif;
 			}
 
