--- a/result.html
+++ b/result.html
@@ -144,9 +144,9 @@
 			.popup-close {
 				background: none;
 				border: none;
-				font-size: 24px;
+				font-size: 30px;
 				cursor: pointer;
-				color: #f03a17;
+				color: #000000;
 				font-family: InterTight, sans-serif;
 			}
 
@@ -198,9 +198,9 @@
 			.popup2-close {
 				background: none;
 				border: none;
-				font-size: 24px;
+				font-size: 30px;
 				cursor: pointer;
-				color: #f03a17;
+				color: #000000;
 				font-family: InterTight, sans-serif;
 			}
 
