--- a/index.html
+++ b/index.html
@@ -469,6 +469,10 @@
 					</div>
 					<div class="popup2-content">
 						<p>Crickdle is a love letter to Test cricket.<br><br><span style="font-weight: 500">March 20 2023</span><br>Crickdle no. 30<br><br>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+						  <div class="bmac-container">
+							  <button class="bmac-button">BUY ME A CHAI</button>
+							  <a href="https://www.buymeacoffee.com/crickdle" target="_blank" rel="noopener" class="bmac-button">BUY ME A CHAI</a>
+						</div>
 					</div>
 				</div>
 			</div>
