--- a/index.html
+++ b/index.html
@@ -376,6 +376,29 @@
 				opacity: 0.8;
 			}
 			
+			.bmac-container {
+				margin-top: 20px;
+				display: flex;
+			}
+			
+			.bmac-button {
+				color: #1dc278;
+				background-color: white;
+				border: none;
+				padding: 8px 16px;
+				border-radius: 4px;
+				cursor: pointer;
+				font-size: 16px;
+				font-family: InterTight, sans-serif;
+				text-decoration: none;
+				height: 40px;
+				font-weight: 500;
+			}
+
+			.bmac-button:hover {
+				opacity: 0.8;
+			}
+			
 			.toolbar-help img,
 			.toolbar-info img {
 				width: 20px;
