--- a/index.html
+++ b/index.html
@@ -379,6 +379,9 @@
 			.bmac-container {
 				margin-top: 20px;
 				display: flex;
+				text-align: center;
+				justify-content: center;
+				align-items: center;
 			}
 			
 			.bmac-button {
