--- a/result.html
+++ b/result.html
@@ -228,6 +228,31 @@
 		.share-button:hover {
 			opacity: 0.8;
 		}
+		
+		.bmac-container {
+				margin-top: 20px;
+				display: flex;
+				text-align: center;
+				justify-content: center;
+				align-items: center;
+			}
+			
+			.bmac-button {
+				color: #1dc278;
+				background-color: white;
+				border: none;
+				border-radius: 4px;
+				cursor: pointer;
+				font-size: 16px;
+				font-family: InterTight, sans-serif;
+				text-decoration: none;
+				height: 40px;
+				font-weight: 500;
+			}
+
+			.bmac-button:hover {
+				opacity: 0.8;
+			}
 			
 		.toolbar-help img,
 		.toolbar-info img {
@@ -283,6 +308,9 @@
 					</div>
 					<div class="popup2-content">
 						<p>Crickdle is a love letter to Test cricket.<br><br><span style="font-weight: 500">March 20 2023</span><br>Crickdle no. 30<br><br>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+						 <div class="bmac-container">
+							  <a href="https://www.buymeacoffee.com/crickdle" target="_blank" rel="noopener" class="bmac-button">BUY ME A CHAI</a>
+						</div>
 					</div>
 					</div>
 			</div>
