--- a/result.html
+++ b/result.html
@@ -241,6 +241,7 @@
 				color: #1dc278;
 				background-color: white;
 				border: none;
+				padding: 8px 16px;
 				border-radius: 4px;
 				cursor: pointer;
 				font-size: 16px;
