--- a/result.html
+++ b/result.html
@@ -221,8 +221,9 @@
 			font-size: 16px;
 			font-weight: 500;
 			font-family: InterTight, sans-serif;
-			margin-right: 10px;
+			margin-right: 20px;
 			height: 40px;
+			text-decoration: none;
 		}
 
 		.share-button:hover {
