--- a/result.html
+++ b/result.html
@@ -211,34 +211,34 @@
 				font-family: InterTight, sans-serif;
 			}
 		
-		.share-button {
-			color: #1dc278;
-			background-color: white;
-			border: none;
-			padding: 8px 16px;
-			border-radius: 4px;
-			cursor: pointer;
-			font-size: 16px;
-			font-weight: 500;
-			font-family: InterTight, sans-serif;
-			margin-right: 20px;
-			height: 40px;
-			text-decoration: none;
-		}
-
-		.share-button:hover {
-			opacity: 0.8;
-		}
-		
-		.bmac-container {
+			.share-container {
 				margin-top: 20px;
-				display: flex;
 				text-align: center;
+				display: flex;
 				justify-content: center;
 				align-items: center;
 			}
-			
-			.bmac-button {
+
+			.share-button {
+				color: #1dc278;
+				background-color: white;
+				border: none;
+				padding: 8px 16px;
+				border-radius: 4px;
+				cursor: pointer;
+				font-size: 16px;
+				font-family: InterTight, sans-serif;
+				margin-right: 20px;
+				height: 40px;
+				font-weight: 500;
+				text-decoration: none;
+			}
+
+			.share-button:hover {
+				opacity: 0.8;
+			}
+
+			.twitter-button {
 				color: #1dc278;
 				background-color: white;
 				border: none;
@@ -252,7 +252,7 @@
 				font-weight: 500;
 			}
 
-			.bmac-button:hover {
+			.twitter-button:hover {
 				opacity: 0.8;
 			}
 			
