--- a/result.html
+++ b/result.html
@@ -327,10 +327,10 @@
 			  <p id="result2-message" style="font-weight: 500"></p>
 			<p><span style="font-weight: 500"><span id="streak"></span></span></p>
 		<p>Come back tomorrow to guess another cricketer.</p>
-			 <div class="bmac-container">
-					  <button class="share-button">SHARE</button>
-							  <a href="https://www.buymeacoffee.com/crickdle" target="_blank" rel="noopener" class="bmac-button">BUY ME A CHAI</a>
-						</div>
+			      <div class="share-container">
+        <button class="share-button">SHARE</button>
+        <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">FOLLOW US ON TWITTER</a>
+      </div>
 		<p>Next Crickdle in <span id="countdown"></span></p>
 			</div>
 
