--- a/result.html
+++ b/result.html
@@ -232,6 +232,7 @@
 				height: 40px;
 				font-weight: 500;
 				text-decoration: none;
+				line-height: 1.5;
 			}
 
 			.share-button:hover {
@@ -250,6 +251,7 @@
 				text-decoration: none;
 				height: 40px;
 				font-weight: 500;
+				line-height: 1.5;
 			}
 
 			.twitter-button:hover {
