--- a/result.html
+++ b/result.html
@@ -333,7 +333,7 @@
 				</div>
 			       <div class="share-container">
         <button class="share-button">SHARE</button>
-        <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">FOLLOW US ON TWITTER</a>
+        <a href="https://www.buymeacoffee.com/crickdle" target="_blank" rel="noopener" class="twitter-button">BUY ME A CHAI</a>
       </div>
 		<p>Next Crickdle in <span id="countdown"></span></p>
 			</div>
