--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
 				height: 40px;
 				font-weight: 500;
 				text-decoration: none;
+				 line-height: 1.5;
 			}
 
 			.share-button:hover {
@@ -371,6 +372,7 @@
 				text-decoration: none;
 				height: 40px;
 				font-weight: 500;
+				 line-height: 1.5;
 			}
 
 			.twitter-button:hover {
