--- a/result.html
+++ b/result.html
@@ -329,7 +329,7 @@
 			<div class="other-stuff">
 			  <p id="result2-message" style="font-weight: 500"></p>
 			<p style="margin-bottom: 0;"><span style="font-weight: 500; font-size: 1.8rem;"><span id="streak"></span></span></p>
-<p style="margin-top: 0;">STREAK</p>
+<p style="margin-top: 0;"><span style="font-size: 1.8rem;">STREAK</span></p>
 		<p>Come back tomorrow to guess another cricketer.</p>
 				</div>
 			       <div class="share-container">
