--- a/result.html
+++ b/result.html
@@ -43,8 +43,10 @@
 		}
 		.dash {
 			display: inline-block;
+			width: 1.5rem;
+			height: 1.5rem;
 			font-weight: bold;
-			font-size: 1rem;
+			font-size: 1.2rem;
 			margin-bottom: 1rem;
 		}
 		.text-large {
