--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket.<br><ul><li><span style="font-weight: 500">March 20 2023</span></li><li>Crickdle No. 30</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+						<p>Crickdle is a love letter to Test cricket.<br><ul><li><span style="font-weight: 500">Mar 20, 2023</span></li><li>Crickdle No. 30</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
 					</div>
 				</div>
 			</div>
