--- a/result.html
+++ b/result.html
@@ -311,7 +311,7 @@
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 20, 2023</span></li><li>Crickdle #30</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 21, 2023</span></li><li>Crickdle #31</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
 					</div>
 					</div>
 			</div>
@@ -403,7 +403,7 @@ let streak = parseInt(localStorage.getItem("streak"), 10);
   }
 } else {
   result1MessageElement.textContent = "Out for a duck!";
-  result2MessageElement.textContent = "You didn't get today's Crickdle. The correct answer is HAFEEZ.";
+  result2MessageElement.textContent = "You didn't get today's Crickdle. The correct answer is STEYN.";
   streak = 0;
   localStorage.setItem("streak", streak.toString());
 }
