--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 21, 2023</span></li><li>Crickdle #31</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 22, 2023</span></li><li>Crickdle #32</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
 					</div>
 				</div>
 			</div>
@@ -521,15 +521,15 @@
 			}
 			
 			const gameDetails = {
-				nation1: "Sri Lanka",
-				nation2: "South Africa",
-				date: "Jul 16-20, 2014",
-				venue: "Galle",
-				score: "South Africa 455/9d & 206/6d, Sri Lanka (T: 370) 292 & 216; South Africa won by 153 runs",
-				crickdlequestion: "South Africa player took 5/54 & 4/45 in this match?"
+				nation1: "Australia",
+				nation2: "India",
+				date: "Jan 2-6, 2008",
+				venue: "Sydney",
+				score: "Australia 463 & 401/7d, India (T: 333) 532 & 210; Australia won by 122 runs",
+				crickdlequestion: "Australia player scored 162* & 61 and took 3/51 in this match?"
 			};
 
-			const correctPlayer = ["STEYN"];
+			const correctPlayer = ["SYMONDS"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
