--- a/index.html
+++ b/index.html
@@ -561,6 +561,7 @@
 					});
 					localStorage.removeItem('playedToday');
 					localStorage.setItem('lastResetDate', today);
+					localStorage.removeItem('resultURL');
 
 					guessInputs.forEach((input, index) => {
 						input.querySelector("input").value = "";
@@ -596,6 +597,12 @@
 					currentInput.style.fontWeight = playedToday ? (localStorage.getItem(`guess${index + 1}FontWeight`) || "") : "";
 					currentInput.disabled = playedToday ? (localStorage.getItem(`guess${index + 1}Disabled`) === 'true') : (index !== 0);
 					submitButtons[index].disabled = currentInput.disabled;
+					if (playedToday) {
+  const resultURL = localStorage.getItem('resultURL');
+  if (resultURL) {
+    window.location.href = resultURL;
+  }
+}
 				});
 			}
 			
@@ -672,11 +679,13 @@
                 guessInput.style.backgroundColor = "#1dc278";
                 guessInput.style.color = "white";
 		     saveState();
-                window.location.href = "result.html?isCorrect=true&" +
+                const resultURL = "result.html?isCorrect=true&" +
 		    "guess1=" + guessInputs[0].querySelector("input").style.backgroundColor +
                                         "&guess2=" + guessInputs[1].querySelector("input").style.backgroundColor +
                                         "&guess3=" + guessInputs[2].querySelector("input").style.backgroundColor +
                                         "&guess4=" + guessInputs[3].querySelector("input").style.backgroundColor;
+		    localStorage.setItem('resultURL', resultURL);
+window.location.href = resultURL;
             } else if (isClose(guess, correctPlayer)) {
                 guessInput.style.backgroundColor = "#e4a404";
                 guessInput.style.color = "white";
@@ -686,10 +695,12 @@
                     guessInputs[index + 1].querySelector("input").focus();
                 } else {
 			 saveState();
-                    window.location.href = "result.html?guess1=" + guessInputs[0].querySelector("input").style.backgroundColor +
+                    const resultURL = "result.html?guess1=" + guessInputs[0].querySelector("input").style.backgroundColor +
                                         "&guess2=" + guessInputs[1].querySelector("input").style.backgroundColor +
                                         "&guess3=" + guessInputs[2].querySelector("input").style.backgroundColor +
                                         "&guess4=" + guessInputs[3].querySelector("input").style.backgroundColor;
+			localStorage.setItem('resultURL', resultURL);
+window.location.href = resultURL;
                 }
             } else {
                 guessInput.style.backgroundColor = "#787c7f";
@@ -700,10 +711,12 @@
                     guessInputs[index + 1].querySelector("input").focus();
                 } else {
 			 saveState();
-                    window.location.href = "result.html?guess1=" + guessInputs[0].querySelector("input").style.backgroundColor +
+                    const resultURL = "result.html?guess1=" + guessInputs[0].querySelector("input").style.backgroundColor +
                                         "&guess2=" + guessInputs[1].querySelector("input").style.backgroundColor +
                                         "&guess3=" + guessInputs[2].querySelector("input").style.backgroundColor +
                                         "&guess4=" + guessInputs[3].querySelector("input").style.backgroundColor;
+			localStorage.setItem('resultURL', resultURL);
+window.location.href = resultURL;
                 }
             }
 					
